Shut up a bunch of wmllint warnings

--- a/_main.cfg
+++ b/_main.cfg
@@ -14,6 +14,7 @@
     abbrev= _ "TDH"
     name= _ "The Dark Hordes"+{NAME_SUFFIX}
     define=CAMPAIGN_THE_DARK_HORDES
+    extra_defines=CAMPAIGN_THE_DARK_HORDES_PART_{ID_SUFFIX}
     {CAMPAIGN_DIFFICULTY EASY "units/undead-necromancers/adept.png~RC(magenta>red)" ( _ "Apprentice") ( _ "Easy")}
     {CAMPAIGN_DIFFICULTY NORMAL "units/undead-necromancers/dark-sorcerer.png~RC(magenta>red)" ( _ "Master") ( _ "Normal")} {DEFAULT_DIFFICULTY}
     {CAMPAIGN_DIFFICULTY HARD "units/undead-necromancers/lich.png~RC(magenta>red)" ( _ "Dark Lord") ( _ "Hard")}
@@ -41,7 +42,6 @@
 <span color='#888'>"+"Version:"+" {~add-ons/The_Dark_Hordes/dist/VERSION}"+"
 "+_"(for Battle for Wesnoth 1.18.x)"+"</span>" # wmllint: no spellcheck
     icon="units/undead-spirit/shadow-s-attack-1.png~RC(magenta>red)"
-    extra_defines=CAMPAIGN_THE_DARK_HORDES_PART_2
     {CAMPAIGN_TDH_SHARED 2 (_ " Part 2")}
 [/campaign]
 
