--- a/base-utils/_main.cfg
+++ b/base-utils/_main.cfg
@@ -53,7 +53,7 @@ This campaign is still under construction, and you have reached the last scenari
 All feedback and suggestions on the campaign in its current state may be posted in the www.wesnoth.org forum thread ‘The Dark Hordes’ (Scenario and Campaign dev. forum).
 
 ― The authors"
-            image="misc/missing-image.png"
+            image="misc/unknown-enemy.png"
         [/message]
     [/event]
 #enddef
