Add wmllint comment that "no translatables"

--- a/base-utils/wml_var.cfg
+++ b/base-utils/wml_var.cfg
@@ -1,6 +1,6 @@
-#textdomain wesnoth-The_Dark_Hordes
+# wmllint: no translatables
 
-# Requires: base-utils.cfg
+# Requires: _main.cfg
 
 ##define MAP_HEIGHT_TO_VARIABLE VAR_ID
 #   {VARIABLE_OP {VAR_ID} map_size y }#end def
