--- a/utils/scenario-utils.cfg
+++ b/utils/scenario-utils.cfg
@@ -1,4 +1,4 @@
-#textdomain wesnoth-The_Dark_Hordes
+# wmllint: no translatables
 
 #define CAPTURE_VILLAGE SIDE X Y
     #Syntactic shortcut to capture particular villages.
