--- a/base-utils/wml_math.cfg
+++ b/base-utils/wml_math.cfg
@@ -1,6 +1,6 @@
-#textdomain wesnoth-The_Dark_Hordes
+# wmllint: no translatables
 
-# Requires: base-utils.cfg, base-variables.cfg
+# Requires: _main.cfg, wml_var.cfg
 
 # I have stripped the math utilities from base-utils.cfg to tidy up things a little; this should
 # ease maintenance a lot, and speed up development avoiding the need to navigate through other non-related
