--- a/_main.cfg
+++ b/_main.cfg
@@ -27,8 +27,8 @@
     description= _ "Lead fugitive dark sorcerer Gwiti Ha’atel to mastery of the undead hordes."+"
 
 "+_"(Intermediate level, 9 scenarios.)"+"
-
-<span color='#888'>"+"Version:"+" {~add-ons/The_Dark_Hordes/dist/VERSION}"+"
+<span color='#888'>
+"+_"Version:"+" {~add-ons/The_Dark_Hordes/dist/VERSION}"+"
 "+_"(for Battle for Wesnoth 1.18.x)"+"</span>" # wmllint: no spellcheck
     icon="units/undead-spirit/shadow-s-3.png~RC(magenta>red)"
     {CAMPAIGN_TDH_SHARED 1 (_ " Part 1")}
@@ -38,8 +38,8 @@
     description= _ "Lead fugitive dark sorcerer Gwiti Ha’atel to mastery of the undead hordes."+"
 
 "+_"(Unfinished, 2 scenarios completed.)"+"
-
-<span color='#888'>"+"Version:"+" {~add-ons/The_Dark_Hordes/dist/VERSION}"+"
+<span color='#888'>
+"+_"Version:"+" {~add-ons/The_Dark_Hordes/dist/VERSION}"+"
 "+_"(for Battle for Wesnoth 1.18.x)"+"</span>" # wmllint: no spellcheck
     icon="units/undead-spirit/shadow-s-attack-1.png~RC(magenta>red)"
     {CAMPAIGN_TDH_SHARED 2 (_ " Part 2")}
