--- a/base-utils/_main.cfg
+++ b/base-utils/_main.cfg
@@ -36,6 +36,18 @@
     {SCROLL_TO $x2 $y2}
 #enddef
 
+#define TDH_GOLD_CARRYOVER
+    carryover_add=yes
+    carryover_percentage=60
+#enddef
+
+#define TDH_GOLD_CARRYOVER_NOTE BONUS
+    [gold_carryover]
+        bonus={BONUS}
+        carryover_percentage=60
+    [/gold_carryover]
+#enddef
+
 {INCLUDE_LOCAL /base-utils/wml_var.cfg}
 {INCLUDE_LOCAL /base-utils/wml_math.cfg}
 
