Balancing, gold carryover overhaul, minor fixes

--- a/scenarios/01_A_New_Chance.cfg
+++ b/scenarios/01_A_New_Chance.cfg
@@ -32,10 +32,8 @@
                 condition=lose
                 description=_ "Death of Gwiti Ha’atel"
             [/objective]
-            [objective]
-                condition=lose
-                description=_ "Turns run out"
-            [/objective]
+            {TURNS_RUN_OUT}
+            {TDH_GOLD_CARRYOVER_NOTE yes}
         [/objectives]
     [/event]
 
@@ -48,7 +46,7 @@
         controller=human
         unrenamable=yes
         fog=yes
-        recruit=Ghost,Skeleton,Skeleton Archer
+        recruit=Ghost,Skeleton,Skeleton Archer,Walking Corpse
         gold=85
         user_team_name= _ "team_name^Gwiti"
         {FLAG_VARIANT undead}
@@ -113,11 +111,12 @@
             [else]
                 [allow_recruit]
                     side=1
-                    type=Walking Corpse,Vampire Bat,Dark Adept
+                    type=Vampire Bat,Dark Adept
                 [/allow_recruit]
                 [endlevel]
                     result=victory
                     bonus=yes
+                    {TDH_GOLD_CARRYOVER}
                 [/endlevel]
             [/else]
         [/if]
