--- a/scenarios/02_Brother_Against_Brother.cfg
+++ b/scenarios/02_Brother_Against_Brother.cfg
@@ -7,7 +7,7 @@
     name= _ "Brother Against Brother"
     map_data="{~add-ons/The_Dark_Hordes/maps/02_Brother_Against_Brother.map}"
     next_scenario="03_Skull_of_Morgorath"
-    turns=28
+    {TURNS 28 26 24}
 
     {SCENARIO_MUSIC "vengeful.ogg"}
     {EXTRA_SCENARIO_MUSIC "battle.ogg"}
@@ -39,10 +39,8 @@
                 condition=lose
                 description=_ "Death of Gwiti Ha’atel"
             [/objective]
-            [objective]
-                condition=lose
-                description=_ "Turns run out"
-            [/objective]
+            {TURNS_RUN_OUT}
+            {TDH_GOLD_CARRYOVER_NOTE yes}
         [/objectives]
     [/event]
 
@@ -55,7 +53,7 @@
         controller=human
         unrenamable=yes
         recruit="Dark Adept,Ghost,Walking Corpse,Vampire Bat,Skeleton,Skeleton Archer"
-        gold=120
+        {GOLD 140 120 100}
         user_team_name= _ "team_name^Gwiti"
         {FLAG_VARIANT undead}
     [/side]
@@ -148,6 +146,7 @@
         [endlevel]
             result=victory
             bonus=yes
+            {TDH_GOLD_CARRYOVER}
         [/endlevel]
     [/event]
 
