--- a/scenarios/04_Mages_And_Elves.cfg
+++ b/scenarios/04_Mages_And_Elves.cfg
@@ -7,7 +7,7 @@
     name= _ "Mages and Elves"
     map_data="{~add-ons/The_Dark_Hordes/maps/04_Mages_And_Elves.map}"
     next_scenario="05_Inside_The_Tower"
-    {TURNS 41 38 36}
+    {TURNS 39 36 34}
 
     {SCENARIO_MUSIC "loyalists.ogg"}
     {EXTRA_SCENARIO_MUSIC "battle.ogg"}
@@ -38,10 +38,8 @@
                 condition=lose
                 description=_ "Death of Gwiti Ha’atel"
             [/objective]
-            [objective]
-                condition=lose
-                description=_ "Turns run out"
-            [/objective]
+            {TURNS_RUN_OUT}
+            {TDH_GOLD_CARRYOVER_NOTE yes}
         [/objectives]
     [/event]
 
@@ -77,7 +75,7 @@
 #endif
 
         {GOLD 100 120 200}
-        {INCOME 4 8 12}
+        {INCOME 3 7 12}
 
         team_name=elves
         user_team_name= _ "team_name^Magi"
@@ -102,7 +100,7 @@
         recruit="Elvish Fighter,Elvish Archer,Elvish Scout,Elvish Shaman"
 #endif
 
-        {GOLD 60 70 130}
+        {GOLD 50 60 120}
         {INCOME 1 4 10}
 
         user_team_name= _ "team_name^Elves"
@@ -221,6 +219,16 @@
         [endlevel]
             result=victory
             bonus=yes
+            {TDH_GOLD_CARRYOVER}
+        [/endlevel]
+    [/event]
+
+    [event]
+        name=enemies defeated
+        [endlevel]
+            result=victory
+            bonus=yes
+            {TDH_GOLD_CARRYOVER}
         [/endlevel]
     [/event]
 [/scenario]
