--- a/scenarios/05_Inside_The_Tower.cfg
+++ b/scenarios/05_Inside_The_Tower.cfg
@@ -6,7 +6,7 @@
     map_data="{~add-ons/The_Dark_Hordes/maps/05_Inside_The_Tower.map}"
     next_scenario="06_Crelanus_Book"
     victory_when_enemies_defeated=no
-    {TURNS 70 66 62}
+    {TURNS 60 56 52}
 
     {SCENARIO_MUSIC "underground.ogg"}
     {EXTRA_SCENARIO_MUSIC "the_deep_path.ogg"}
@@ -25,6 +25,8 @@
                 condition=lose
                 description=_ "Death of Gwiti Ha’atel"
             [/objective]
+            {TURNS_RUN_OUT}
+            {TDH_GOLD_CARRYOVER_NOTE no}
         [/objectives]
     [/event]
 
@@ -142,6 +144,20 @@
             side=1
         [/unit]
 #endif
+        [modify_unit]
+            [filter]
+                type=Revenant
+                [or]
+                    type=Skeleton
+                [/or]
+            [/filter]
+            [object]
+                duration=scenario
+                [effect]
+                    apply_to=loyal
+                [/effect]
+            [/object]
+        [/modify_unit]
         [message]
             speaker=Karae
             message= _ "Hayaargghh! We have arrived! Command us, Master!"
@@ -199,6 +215,7 @@
             terrain=Ds
         [/terrain]
         [redraw]
+            clear_shroud=yes
         [/redraw]
         [message]
             speaker=Krimitros
@@ -297,6 +314,8 @@
 
         [endlevel]
             result=victory
+            bonus=no
+            {TDH_GOLD_CARRYOVER}
         [/endlevel]
     [/event]
 [/scenario]
