--- a/scenarios/06_Crelanus_Book.cfg
+++ b/scenarios/06_Crelanus_Book.cfg
@@ -6,7 +6,7 @@
     map_data="{~add-ons/The_Dark_Hordes/maps/06_Crelanus_Book.map}"
     next_scenario="07_Confrontation"
     victory_when_enemies_defeated="no"
-    turns=30
+    {TURNS 30 26 22}
 
     {SCENARIO_MUSIC "wanderer.ogg"}
     {EXTRA_SCENARIO_MUSIC "loyalists.ogg"}
@@ -33,10 +33,8 @@
                 condition=lose
                 description=_ "Death of Gwiti Ha’atel"
             [/objective]
-            [objective]
-                condition=lose
-                description=_ "Turns run out"
-            [/objective]
+            {TURNS_RUN_OUT}
+            {TDH_GOLD_CARRYOVER_NOTE yes}
         [/objectives]
     [/event]
 
@@ -145,6 +143,13 @@
         [/set_recruit]
     [/event]
 
+    #the book
+    [item]
+        x=30
+        y=2
+        image=items/book4.png
+    [/item]
+
     #When Gwiti moves to the swamp
     [event]
         name=moveto
@@ -179,7 +184,7 @@
             terrain=Chs
         [/terrain]
         # wmllint: local spelling ctrl-alt-r
-#ifdef EASY
+#ifndef HARD
         [message]
             speaker=narrator
             message= _ "Use ctrl-alt-r to repeat your last recruit."
@@ -238,6 +243,7 @@
         [endlevel]
             result=victory
             bonus=yes
+            {TDH_GOLD_CARRYOVER}
         [/endlevel]
     [/event]
     [event]
@@ -259,5 +265,11 @@
             speaker=Advance Scout
             message= _ "My lord, your suspicions were correct. There is indeed a dark sorcerer in this part of the country!"
         [/message]
+        [kill]
+            id=Advance Scout
+            fire_event=no
+            animate=no
+        [/kill]
+        [redraw][/redraw]
     [/event]
 [/scenario]
