--- a/scenarios/07_Confrontation.cfg
+++ b/scenarios/07_Confrontation.cfg
@@ -7,7 +7,7 @@
     name= _ "Confrontation"
     map_data="{~add-ons/The_Dark_Hordes/maps/07_Confrontation.map}"
     next_scenario="08_Underground_Pool"
-    {TURNS 42 39 37}
+    {TURNS 38 35 32}
 
     {SCENARIO_MUSIC "revelation.ogg"}
     {EXTRA_SCENARIO_MUSIC "wanderer.ogg"}
@@ -34,10 +34,8 @@
                 condition=lose
                 description=_ "Death of Gwiti Ha’atel"
             [/objective]
-            [objective]
-                condition=lose
-                description=_ "Turns run out"
-            [/objective]
+            {TURNS_RUN_OUT}
+            {TDH_GOLD_CARRYOVER_NOTE yes}
         [/objectives]
     [/event]
 
@@ -50,7 +48,7 @@
         controller=human
         unrenamable=yes
         recruit="Dark Adept,Walking Corpse,Skeleton,Skeleton Archer,Vampire Bat,Ghost"
-        gold=250
+        gold=240
         team_name=evil
         user_team_name= _ "team_name^Gwiti"
         {FLAG_VARIANT undead}
@@ -64,7 +62,7 @@
         canrecruit=yes
         recruit="Mage,Cavalryman,Fencer,Bowman,Spearman"
 
-        {GOLD 100 200 300}
+        {GOLD 150 250 350}
         {INCOME 5 10 20}
 
         user_team_name= _ "team_name^Wesnothians"
@@ -80,7 +78,7 @@
         no_leader=yes
         side=3
         recruit="White Mage,Paladin"
-        gold=4100
+        gold=2100
         income=50
         team_name=mages
         user_team_name= _ "team_name^Wesnothians"
@@ -95,7 +93,7 @@
     [/side]
 
     #This is Leonard's country, all the base are belong to him
-    {STARTING_VILLAGES 2 40}
+    {STARTING_VILLAGES_ALL 2}
 
     [event]
         name=start
@@ -183,10 +181,8 @@
                 condition=lose
                 description=_ "Death of Gwiti Ha’atel"
             [/objective]
-            [objective]
-                condition=lose
-                description=_ "Turns run out"
-            [/objective]
+            {TURNS_RUN_OUT}
+            {TDH_GOLD_CARRYOVER_NOTE yes}
         [/objectives]
     [/event]
 
@@ -242,6 +238,8 @@
                 [/message]
                 [endlevel]
                     result=victory
+                    bonus=yes
+                    {TDH_GOLD_CARRYOVER}
                 [/endlevel]
             [/else]
         [/if]
@@ -255,7 +253,7 @@
             name= _ "Tanar"
             unrenamable=yes
             [modifications]
-                {TRAIT_LOYAL}
+                {TRAIT_LOYAL_HERO}
                 {TRAIT_STRONG}
             [/modifications]
             x=63
