--- a/scenarios/08_Underground_Pool.cfg
+++ b/scenarios/08_Underground_Pool.cfg
@@ -6,7 +6,7 @@
     map_data="{~add-ons/The_Dark_Hordes/maps/08_Underground_Pool.map}"
     victory_when_enemies_defeated=no
     next_scenario="09_Underground_River"
-    {TURNS 54 52 48}
+    {TURNS 42 40 36}
 
     {SCENARIO_MUSIC "underground.ogg"}
     {EXTRA_SCENARIO_MUSIC "the_deep_path.ogg"}
@@ -32,10 +32,8 @@
                 condition=lose
                 description=_ "Death of Tanar"
             [/objective]
-            [objective]
-                condition=lose
-                description=_ "Turns run out"
-            [/objective]
+            {TURNS_RUN_OUT}
+            {TDH_GOLD_CARRYOVER_NOTE no}
         [/objectives]
     [/event]
 
@@ -67,11 +65,15 @@
         [ai]
             aggression=1.0
         [/ai]
+        {GENERIC_UNIT 2 (Dwarvish Ulfserker) 3 16}
+        {GENERIC_UNIT 2 (Dwarvish Ulfserker) 13 5}
+        {GENERIC_UNIT 2 (Dwarvish Ulfserker) 10 2}
         [unit]
             type=Giant Spider
             x=10
             y=3
             side=2
+            upkeep=loyal
         [/unit]
         {FLAG_VARIANT knalgan}
     [/side]
@@ -82,21 +84,42 @@
         type=Dwarvish Lord
         side=3
         canrecruit=yes
-        recruit=Dwarvish Fighter
+        recruit=Dwarvish Fighter,Dwarvish Thunderer
         gold=0
         team_name=enemy
         user_team_name= _ "team_name^Dwarves"
-
-        {GENERIC_GUARD_UNIT 3 (Dwarvish Fighter) 15 20}
+        [ai]
+            aggression=1.0
+            caution=-0.4
+        [/ai]
+        {GENERIC_GUARD_UNIT 3 (Dwarvish Fighter) 19 19}
         {GENERIC_GUARD_UNIT 3 (Dwarvish Fighter) 16 16}
-        {GENERIC_GUARD_UNIT 3 (Dwarvish Fighter) 13 18}
-        {GENERIC_GUARD_UNIT 3 (Dwarvish Fighter) 13 19}
+        {GENERIC_GUARD_UNIT 3 (Dwarvish Fighter) 14 15}
+        {GENERIC_GUARD_UNIT 3 (Dwarvish Fighter) 14 18}
         {GENERIC_GUARD_UNIT 3 (Dwarvish Fighter)  9 17}
         {GENERIC_GUARD_UNIT 3 (Dwarvish Fighter) 10 18}
 #ifdef HARD
-        {GENERIC_GUARD_UNIT 3 (Dwarvish Fighter) 17 19}
-        {GENERIC_GUARD_UNIT 3 (Dwarvish Fighter) 15 16}
-        {GENERIC_GUARD_UNIT 3 (Dwarvish Fighter)  9 16}
+        [unit]
+            type=Dwarvish Steelclad
+            x=18
+            y=14
+            side=2
+            upkeep=loyal
+        [/unit]
+        [unit]
+            type=Dwarvish Steelclad
+            x=16
+            y=14
+            side=2
+            upkeep=loyal
+        [/unit]
+        [unit]
+            type=Dwarvish Steelclad
+            x=9
+            y=12
+            side=2
+            upkeep=loyal
+        [/unit]
 #endif
         {FLAG_VARIANT knalgan}
     [/side]
@@ -166,6 +189,8 @@
         [/filter]
         [endlevel]
             result=victory
+            bonus=no
+            {TDH_GOLD_CARRYOVER}
         [/endlevel]
     [/event]
 
@@ -187,6 +212,11 @@
             speaker=Tanar
             message= _ "The Hoard of the Dwarves! Three hundred pieces of gold at least!"
         [/message]
+
+        [sound]
+            name=gold.ogg
+        [/sound]
+
         [gold]
             side=1
             amount=320
