--- a/scenarios/09_Underground_River.cfg
+++ b/scenarios/09_Underground_River.cfg
@@ -36,6 +36,7 @@
                 condition=lose
                 description=_ "Death of Tanar"
             [/objective]
+            {TDH_GOLD_CARRYOVER_NOTE no}
             note=_ "<small>Your castle will sink at the start of turn 4.</small>"
         [/objectives]
     [/event]
@@ -67,7 +68,7 @@
 #else
         recruit=Dwarvish Fighter,Dwarvish Guardsman,Dwarvish Thunderer,Dwarvish Ulfserker,Dwarvish Steelclad,Dwarvish Stalwart,Dwarvish Thunderguard
 #endif
-        {GOLD 25 50 100}
+        {GOLD 75 100 150}
         {FLAG_VARIANT knalgan}
 
         {GENERIC_GUARD_UNIT 2 (Dwarvish Fighter) 10 20}
@@ -98,7 +99,7 @@
 #else
         recruit=Naga Fighter,Naga Warrior
 #endif
-        {GOLD 100 200 300}
+        {GOLD 50 150 225}
         {INCOME 5 15 25}
         [ai]
             #The intention is that the nagas don't leave the water,
@@ -240,6 +241,8 @@ Now I have to study the book."
                 [/message]
                 [endlevel]
                     result=victory
+                    bonus=no
+                    {TDH_GOLD_CARRYOVER}
                 [/endlevel]
             [/then]
             [else]
@@ -285,6 +288,8 @@ Now I have to study the book."
                 [/message]
                 [endlevel]
                     result=victory
+                    bonus=no
+                    {TDH_GOLD_CARRYOVER}
                 [/endlevel]
             [/then]
         [/if]
@@ -385,11 +390,11 @@ Now I have to study the book."
             speaker=unit
             message= _ "My clan will avenge this betrayal!"
         [/message]
-        [kill]
-            id=Tanar
-            fire_event=no
-            animate=yes
-        [/kill]
+        #[kill]
+            #id=Tanar
+            #fire_event=no
+            #animate=yes
+        #[/kill]
         [endlevel]
             result=defeat
         [/endlevel]
