--- a/scenarios/09x_Inter.cfg
+++ b/scenarios/09x_Inter.cfg
@@ -16,6 +16,8 @@
         shroud=yes
         team_name=undead
         recruit=Dark Adept,Walking Corpse,Skeleton,Skeleton Archer,Vampire Bat,Ghost,Orcish Grunt,Orcish Archer,Orcish Assassin
+        gold=0
+        income=-2
         {FLAG_VARIANT undead}
     [/side]
     [event]
@@ -35,6 +37,7 @@
                     [endlevel]
                         next_scenario="10_Return_to_the_Northlands"
                         result,bonus,save,linger_mode,carryover_report=victory,no,yes,no,no
+                        replay_save=no
                         carryover_percentage,music=100,silence.ogg
                     [/endlevel]
                 [/command]
@@ -45,6 +48,7 @@
                     [endlevel]
                         next_scenario=null
                         result,bonus,save,linger_mode,carryover_report=victory,no,no,no,no
+                        replay_save=no
                     [/endlevel]
                 [/command]
             [/option]
