--- a/scenarios/10_Return_to_the_Northlands.cfg
+++ b/scenarios/10_Return_to_the_Northlands.cfg
@@ -9,7 +9,7 @@
 
     #TODO: balancing
     # this is supposed to be an easy scenario where you can gain gold and veterans
-    {TURNS 34 32 28}
+    {TURNS 32 30 26}
     {SCENARIO_MUSIC "northerners.ogg"}
     {EXTRA_SCENARIO_MUSIC "vengeful.ogg"}
     {EXTRA_SCENARIO_MUSIC "the_dangerous_symphony.ogg"}
@@ -27,12 +27,10 @@
             [/objective]
             [objective]
                 condition=lose
-                description= _ "Death of Gwiti Ha’atel"
+                description= _ "Destruction of Gwiti Ha’atel"
             [/objective]
-            [objective]
-                condition=lose
-                description= _ "Turns run out"
-            [/objective]
+            {TURNS_RUN_OUT}
+            {TDH_GOLD_CARRYOVER_NOTE yes}
         [/objectives]
     [/event]
 
@@ -49,7 +47,7 @@
         team_name=undead
         user_team_name= _ "team_name^Gwiti"
         recruit=Dark Adept,Walking Corpse,Skeleton,Skeleton Archer,Vampire Bat,Ghost,Ghoul
-        gold=200
+        {GOLD 220 200 180}
         {FLAG_VARIANT undead}
     [/side]
     [side]
@@ -62,7 +60,7 @@
         team_name=undead
         user_team_name= _ "team_name^Tanar"
         recruit=Orcish Grunt,Orcish Archer,Orcish Assassin,Wolf Rider
-        gold=200
+        {GOLD 220 200 180}
     [/side]
     [side]
         side=3
@@ -93,7 +91,7 @@
             canrecruit=yes
             unrenamable=yes
             [modifications]
-                {TRAIT_LOYAL}
+                {TRAIT_LOYAL_HERO}
                 {TRAIT_STRONG}
             [/modifications]
             side=2
@@ -103,13 +101,17 @@
         # give the player a bunch of gold to get veterans with
         [gold]
             side=1
-            amount=300
+            amount=200
         [/gold]
         [gold]
             side=2
-            amount=300
+            amount=200
         [/gold]
 #else
+        [disallow_recruit]
+            side=1
+            type=Orcish Grunt,Orcish Archer,Orcish Assassin
+        [/disallow_recruit]
         [recall]
             id=Tanar
             show=no
@@ -338,6 +340,8 @@
                 [/clear_variable]
                 [endlevel]
                     result=victory
+                    bonus=yes
+                    {TDH_GOLD_CARRYOVER}
                 [/endlevel]
             [/then]
         [/if]
