--- a/scenarios/11_An_Orcish_Coup.cfg
+++ b/scenarios/11_An_Orcish_Coup.cfg
@@ -7,7 +7,7 @@
     map_data="{~add-ons/The_Dark_Hordes/maps/11_An_Orcish_Coup.map}"
     next_scenario="12_Assault_on_Alduin"
 
-    {TURNS 50 40 30}
+    {TURNS 48 40 32}
     #TODO: balancing
 
     {SCENARIO_MUSIC "northerners.ogg"}
@@ -32,12 +32,10 @@
             [/objective]
             [objective]
                 condition=lose
-                description= _ "Death of Gwiti Ha’atel"
+                description= _ "Destruction of Gwiti Ha’atel"
             [/objective]
-            [objective]
-                condition=lose
-                description= _ "Turns run out"
-            [/objective]
+            {TURNS_RUN_OUT}
+            {TDH_GOLD_CARRYOVER_NOTE no}
         [/objectives]
     [/event]
 
@@ -53,7 +51,7 @@
         user_team_name= _ "team_name^Gwiti"
         recruit=Dark Adept,Walking Corpse,Skeleton,Skeleton Archer,Vampire Bat,Ghost,Ghoul
         #TODO: balancing
-        {GOLD 200 150 100}
+        {GOLD 175 125 75}
         {FLAG_VARIANT undead}
     [/side]
     [side]
@@ -69,7 +67,7 @@
         user_team_name= _ "team_name^Tanar"
         recruit=Orcish Grunt,Orcish Archer,Orcish Assassin,Wolf Rider
         #TODO: balancing
-        {GOLD 200 150 100}
+        {GOLD 175 125 75}
     [/side]
     [side]
         type=Orcish Warlord
@@ -81,10 +79,10 @@
         controller=ai
         unrenamable=yes
         team_name=orcs
-        user_team_name= _ "Orcs"
+        user_team_name= _ "team_name^Orcs"
         recruit=Orcish Grunt,Orcish Archer,Orcish Assassin,Orcish Warrior,Orcish Crossbowman,Orcish Slayer
         #TODO: balancing
-        gold=100
+        {GOLD 75 100 125}
         {INCOME 25 50 100}
     [/side]
     [side]
@@ -97,10 +95,10 @@
         controller=ai
         unrenamable=yes
         team_name=orcs
-        user_team_name= _ "Orcs"
+        user_team_name= _ "team_name^Orcs"
         recruit=Troll,Troll Rocklobber,Troll Whelp,Orcish Grunt,Orcish Warrior,Orcish Archer
         #TODO: balancing
-        gold=100
+        {GOLD 60 90 115}
         {INCOME 25 50 100}
     [/side]
     [side]
@@ -113,10 +111,10 @@
         controller=ai
         unrenamable=yes
         team_name=orcs
-        user_team_name= _ "Orcs"
+        user_team_name= _ "team_name^Orcs"
         recruit=Orcish Warrior,Orcish Grunt,Orcish Archer,Orcish Assassin,Goblin Spearman,Goblin Rouser,Goblin Spearman,Wolf Rider
         #TODO: balancing
-        gold=100
+        {GOLD 60 90 115}
         {INCOME 25 50 100}
     [/side]
 
@@ -224,19 +222,7 @@
             name=potion.ogg
         [/sound]
 
-        [color_adjust]
-            red=100
-            green=100
-            blue=100
-        [/color_adjust]
-
-        {DELAY 10}
-
-        [color_adjust]
-            red=0
-            green=0
-            blue=0
-        [/color_adjust]
+        {FLASH_WHITE ()}
 
         {DELAY 2000}
 
@@ -253,8 +239,7 @@
                         [hides]
                             id=invisible
                             name= _ "invisible"
-                            description= _ "invisible:
-The unit is invisible.
+                            description= _ "The unit is invisible.
 
 Enemy units cannot see this unit, except if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
                             affect_self=yes
@@ -265,8 +250,7 @@ Enemy units cannot see this unit, except if they have units next to it. Any enem
                         [hides]
                             id=invisible
                             name= _ "mostly invisible"
-                            description= _ "Mostly Invisible:
-The unit is invisible, except during the day.
+                            description= _ "The unit is invisible, except during the day.
 
 Enemy units can only see this unit during the day, or if they have units next to it. Any enemy unit that first discovers this unit immediately loses all its remaining movement."
                             affect_self=yes
@@ -324,7 +308,7 @@ Enemy units can only see this unit during the day, or if they have units next to
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
-            message= _ "Perhaps you aren’t as powerful as you had thought. A lich's eyes should keep me invisible even during the day."
+            message= _ "Perhaps you aren’t as powerful as you had thought. A lich’s eyes should keep me invisible even during the day."
         [/message]
     [/event]
 
@@ -390,13 +374,11 @@ Enemy units can only see this unit during the day, or if they have units next to
                         description= _ "Kill the last orcish leader"
                     [/objective]
                     [objective]
-                        condition=win
-                        description= _ "Turns run out"
-                    [/objective]
-                    [objective]
                         condition=lose
-                        description= _ "Death of Gwiti Ha’atel"
+                        description= _ "Destruction of Gwiti Ha’atel"
                     [/objective]
+                    {TURNS_RUN_OUT}
+                    {TDH_GOLD_CARRYOVER_NOTE no}
                 [/objectives]
             [/case]
             [case]
@@ -435,6 +417,11 @@ Enemy units can only see this unit during the day, or if they have units next to
                             speaker="Tanar"
                             message= _ "Tend to the wounded and gather your equipment. We have a campaign to plan."
                         [/message]
+                        [endlevel]
+                            result=victory
+                            bonus=no
+                            {TDH_GOLD_CARRYOVER}
+                        [/endlevel]
                     [/then]
                     [else]
                         [message]
@@ -453,7 +440,7 @@ Enemy units can only see this unit during the day, or if they have units next to
                 [/message]
             [/else]
         [/switch]
-        {VARIABLE_OP chieftain_bodycount add 1}
+        {VARIABLE_ADD chieftain_bodycount 1}
     [/event]
     [event]
         name=time over
@@ -471,6 +458,8 @@ Enemy units can only see this unit during the day, or if they have units next to
                 [/message]
                 [endlevel]
                     result=victory
+                    bonus=no
+                    {TDH_GOLD_CARRYOVER}
                 [/endlevel]
             [/then]
             [else]
