--- a/scenarios/03_Skull_of_Morgorath.cfg
+++ b/scenarios/03_Skull_of_Morgorath.cfg
@@ -7,7 +7,7 @@
     name= _ "The Skull of Morgorath"
     map_data="{~add-ons/The_Dark_Hordes/maps/03_Skull_of_Morgorath.map}"
     next_scenario="04_Mages_And_Elves"
-    {TURNS 32 30 28}
+    {TURNS 30 28 26}
 
     {SCENARIO_MUSIC "northerners.ogg"}
     {EXTRA_SCENARIO_MUSIC "wanderer.ogg"}
@@ -35,12 +35,10 @@
             [/objective]
             [objective]
                 condition=lose
-                description=_ "Death of Leganoth"
+                description=_ "Destruction of Leganoth"
             [/objective]
-            [objective]
-                condition=lose
-                description=_ "Turns run out"
-            [/objective]
+            {TURNS_RUN_OUT}
+            {TDH_GOLD_CARRYOVER_NOTE yes}
         [/objectives]
     [/event]
 
@@ -66,7 +64,7 @@
         canrecruit=yes
         recruit="Orcish Grunt,Wolf Rider,Orcish Archer,Troll Whelp"
         user_team_name= _ "team_name^Karz"
-        {GOLD 60 90 135}
+        {GOLD 70 100 145}
     [/side]
 
     [side]
@@ -77,7 +75,7 @@
         canrecruit=yes
         recruit="Orcish Grunt,Wolf Rider,Orcish Archer,Troll Whelp"
         user_team_name= _ "team_name^Isidal"
-        {GOLD 60 90 135}
+        {GOLD 70 100 145}
     [/side]
 
     [side]
@@ -89,7 +87,7 @@
         canrecruit=yes
         recruit="Orcish Grunt,Wolf Rider,Orcish Archer,Troll"
         user_team_name= _ "team_name^Nakur"
-        {GOLD 80 100 150}
+        {GOLD 100 120 170}
     [/side]
 
     [event]
@@ -114,6 +112,7 @@
             x=7
             y=5
             side=1
+            upkeep=loyal
             {IS_HERO}
         [/unit]
 
@@ -191,6 +190,7 @@
         [endlevel]
             result=victory
             bonus=yes
+            {TDH_GOLD_CARRYOVER}
         [/endlevel]
     [/event]
     [event]
