More flag variations, minor fixes

--- a/scenarios/01_A_New_Chance.cfg
+++ b/scenarios/01_A_New_Chance.cfg
@@ -62,6 +62,7 @@
         gold=6
         income=2
         user_team_name= _ "team_name^Monsters"
+        {FLAG_VARIANT6 ragged}
 
         {GENERIC_GUARD_UNIT 2 (Ogre) 8 8}
         {GENERIC_GUARD_UNIT 2 (Troll Whelp) 5 13}
