--- a/scenarios/03_Skull_of_Morgorath.cfg
+++ b/scenarios/03_Skull_of_Morgorath.cfg
@@ -64,6 +64,7 @@
         canrecruit=yes
         recruit="Orcish Grunt,Wolf Rider,Orcish Archer,Troll Whelp"
         user_team_name= _ "team_name^Karz"
+        {FLAG_VARIANT6 ragged}
         {GOLD 70 100 145}
     [/side]
 
@@ -75,6 +76,7 @@
         canrecruit=yes
         recruit="Orcish Grunt,Wolf Rider,Orcish Archer,Troll Whelp"
         user_team_name= _ "team_name^Isidal"
+        {FLAG_VARIANT6 ragged}
         {GOLD 70 100 145}
     [/side]
 
@@ -87,6 +89,7 @@
         canrecruit=yes
         recruit="Orcish Grunt,Wolf Rider,Orcish Archer,Troll"
         user_team_name= _ "team_name^Nakur"
+        {FLAG_VARIANT6 ragged}
         {GOLD 100 120 170}
     [/side]
 
@@ -199,6 +202,7 @@
             speaker="Gwiti Ha'atel"
             message= _ "Argh! This is only half of the skull, and near enough to powerless! Begone, Spirit!"
         [/message]
+        {THUNDER ()}
         [kill]
             id=Leganoth
             animate=yes
