--- a/scenarios/04_Mages_And_Elves.cfg
+++ b/scenarios/04_Mages_And_Elves.cfg
@@ -105,6 +105,7 @@
 
         user_team_name= _ "team_name^Elves"
         team_name=elves
+        {FLAG_VARIANT wood-elvish}
     [/side]
 
     {STARTING_VILLAGES 2 6}
@@ -144,6 +145,7 @@
         [/message]
     [/event]
 
+    #tower's door
     [item]
         x=15
         y=3
