--- a/scenarios/06_Crelanus_Book.cfg
+++ b/scenarios/06_Crelanus_Book.cfg
@@ -69,6 +69,7 @@
 
         user_team_name= _ "team_name^Elves"
         {GOLD 120 140 220}
+        {FLAG_VARIANT wood-elvish}
     [/side]
 
     [side]
@@ -87,6 +88,7 @@
 
         user_team_name= _ "team_name^Orcs"
         {GOLD 120 140 240}
+        {FLAG_VARIANT6 ragged}
     [/side]
 
     [side]
@@ -143,7 +145,7 @@
         [/set_recruit]
     [/event]
 
-    #the book
+    #crelanu's book
     [item]
         x=30
         y=2
