--- a/scenarios/10_Return_to_the_Northlands.cfg
+++ b/scenarios/10_Return_to_the_Northlands.cfg
@@ -61,6 +61,7 @@
         user_team_name= _ "team_name^Tanar"
         recruit=Orcish Grunt,Orcish Archer,Orcish Assassin,Wolf Rider
         {GOLD 220 200 180}
+        {FLAG_VARIANT6 ragged}
     [/side]
     [side]
         side=3
@@ -75,6 +76,7 @@
         recruit=Orcish Grunt,Orcish Archer,Wolf Rider,Goblin Spearman,Orcish Assassin
         {GOLD 450 600 800}
         {INCOME 0 8 16}
+        {FLAG_VARIANT6 ragged}
     [/side]
 
     [event]
