--- a/scenarios/11_An_Orcish_Coup.cfg
+++ b/scenarios/11_An_Orcish_Coup.cfg
@@ -8,7 +8,7 @@
     next_scenario="12_Assault_on_Alduin"
 
     {TURNS 48 40 32}
-    #TODO: balancing
+    #TODO: balancing (for more!)
 
     {SCENARIO_MUSIC "northerners.ogg"}
     {EXTRA_SCENARIO_MUSIC "siege_of_laurelmor.ogg"}
@@ -65,6 +65,7 @@
         unrenamable=yes
         team_name=undead
         user_team_name= _ "team_name^Tanar"
+        {FLAG_VARIANT6 ragged}
         recruit=Orcish Grunt,Orcish Archer,Orcish Assassin,Wolf Rider
         #TODO: balancing
         {GOLD 175 125 75}
@@ -80,6 +81,7 @@
         unrenamable=yes
         team_name=orcs
         user_team_name= _ "team_name^Orcs"
+        {FLAG_VARIANT6 ragged}
         recruit=Orcish Grunt,Orcish Archer,Orcish Assassin,Orcish Warrior,Orcish Crossbowman,Orcish Slayer
         #TODO: balancing
         {GOLD 75 100 125}
@@ -96,6 +98,7 @@
         unrenamable=yes
         team_name=orcs
         user_team_name= _ "team_name^Orcs"
+        {FLAG_VARIANT6 ragged}
         recruit=Troll,Troll Rocklobber,Troll Whelp,Orcish Grunt,Orcish Warrior,Orcish Archer
         #TODO: balancing
         {GOLD 60 90 115}
@@ -112,6 +115,7 @@
         unrenamable=yes
         team_name=orcs
         user_team_name= _ "team_name^Orcs"
+        {FLAG_VARIANT6 ragged}
         recruit=Orcish Warrior,Orcish Grunt,Orcish Archer,Orcish Assassin,Goblin Spearman,Goblin Rouser,Goblin Spearman,Wolf Rider
         #TODO: balancing
         {GOLD 60 90 115}
@@ -473,6 +477,7 @@ Enemy units can only see this unit during the day, or if they have units next to
 
     [event]
         name=victory
+
         {CLEAR_VARIABLE chieftain_bodycount}
     [/event]
 [/scenario]
