--- a/scenarios/02_Brother_Against_Brother.cfg
+++ b/scenarios/02_Brother_Against_Brother.cfg
@@ -66,7 +66,7 @@
         side=2
         canrecruit=yes
 #ifdef HARD
-        recruit=Dark Adept,Ghost,Blood Bat,Revenant,Bone Shooter
+        recruit=Dark Adept,Ghost,Soulless,Blood Bat,Revenant,Bone Shooter
 #else
         recruit=Dark Adept,Ghost,Walking Corpse,Vampire Bat,Skeleton,Skeleton Archer
 #endif
