--- a/_main.cfg
+++ b/_main.cfg
@@ -18,7 +18,6 @@
     {CAMPAIGN_DIFFICULTY EASY "units/undead-necromancers/adept.png~RC(magenta>red)" ( _ "Apprentice") ( _ "Easy")}
     {CAMPAIGN_DIFFICULTY NORMAL "units/undead-necromancers/dark-sorcerer.png~RC(magenta>red)" ( _ "Master") ( _ "Normal")} {DEFAULT_DIFFICULTY}
     {CAMPAIGN_DIFFICULTY HARD "units/undead-necromancers/lich.png~RC(magenta>red)" ( _ "Dark Lord") ( _ "Hard")}
-    image="items/coffin-closed.png"
     {~add-ons/The_Dark_Hordes/about.cfg}
 #enddef
 
@@ -27,10 +26,11 @@
     description= _ "Lead fugitive dark sorcerer Gwiti Ha’atel to mastery of the undead hordes."+"
 
 "+_"(Intermediate level, 9 scenarios.)"+"
-<span color='#888'>
-"+_"Version:"+" {~add-ons/The_Dark_Hordes/dist/VERSION}"+"
-"+_"(for Battle for Wesnoth 1.18.x)"+"</span>" # wmllint: no spellcheck
+<span color='#888' size='smaller'>
+"+_"Version:"+" {~add-ons/The_Dark_Hordes/dist/VERSION} "+_"for Battle for Wesnoth 1.18.0 or later"+"
+"+_"In Wesnoth.org:"+" https://r.wesnoth.org/t?????"+"</span>" # wmllint: no spellcheck
     icon="units/undead-spirit/shadow-s-3.png~RC(magenta>red)"
+    image="data/add-ons/The_Dark_Hordes/images/portraits/gwiti.png"
     {CAMPAIGN_TDH_SHARED 1 (_ " Part 1")}
 [/campaign]
 [campaign]
@@ -38,10 +38,11 @@
     description= _ "Lead fugitive dark sorcerer Gwiti Ha’atel to mastery of the undead hordes."+"
 
 "+_"(Unfinished, 2 scenarios completed.)"+"
-<span color='#888'>
-"+_"Version:"+" {~add-ons/The_Dark_Hordes/dist/VERSION}"+"
-"+_"(for Battle for Wesnoth 1.18.x)"+"</span>" # wmllint: no spellcheck
+<span color='#888' size='smaller'>
+"+_"Version:"+" {~add-ons/The_Dark_Hordes/dist/VERSION} "+_"for Battle for Wesnoth 1.18.0 or later"+"
+"+_"In Wesnoth.org:"+" https://r.wesnoth.org/t?????"+"</span>" # wmllint: no spellcheck
     icon="units/undead-spirit/shadow-s-attack-1.png~RC(magenta>red)"
+    image="data/add-ons/The_Dark_Hordes/images/portraits/tanar.png"
     {CAMPAIGN_TDH_SHARED 2 (_ " Part 2")}
 [/campaign]
 
