--- a/scenarios/01_A_New_Chance.cfg
+++ b/scenarios/01_A_New_Chance.cfg
@@ -9,6 +9,7 @@
 
     {SCENARIO_MUSIC "knolls.ogg"}
     {EXTRA_SCENARIO_MUSIC "transience.ogg"}
+    {EXTRA_SCENARIO_MUSIC "gameplay06.ogg"}
 
     #Introduction
     {STORYTXT_A_NEW_CHANCE}
