--- a/utils/items.cfg
+++ b/utils/items.cfg
@@ -74,6 +74,23 @@
             side=1
             amount={GOLD_AMOUNT}
         [/gold]
+        {VARIABLE gold_amount ({GOLD_AMOUNT})}
+        [if]
+            [variable]
+                name=gold_amount
+                numerical_not_equals=0
+            [/variable]
+            [then]
+                [sound]
+                    name=gold.ogg
+                [/sound]
+                [floating_text]
+                    x={X}
+                    y={Y}
+                    text="<span color='FFCC33'>"+ _ "+$gold_amount| gold"+"</span>"
+                [/floating_text]
+            [/then]
+        [/if]
         [remove_item]
             x={X}
             y={Y}
