--- a/utils/storytxt.cfg
+++ b/utils/storytxt.cfg
@@ -5,6 +5,7 @@
 #define STORYTXT_A_NEW_CHANCE
     [story]
         [part]
+            music="underground.ogg"
             story= _ "At a great battle at the Stone of Erzen, the brothers Gwiti and Nati Ha’atel showed their skills for the first time: Thinking that their side was losing the battle, they called upon the corpses of former enemies to rise again and fight on their side."
             background=misc/blank.png
             [image]
@@ -48,6 +49,7 @@
 #define STORYTXT_BROTHER_AGAINST_BROTHER
     [story]
         [part]
+            music="revelation.ogg"
             story= _ "As Gwiti explored the unknown land, he ran into his brother."
             {JOURNEY_BROTHER_AGAINST_BROTHER}
         [/part]
@@ -57,6 +59,7 @@
 #define STORYTXT_SKULL_OF_MORGORATH
     [story]
         [part]
+            music="northerners.ogg"
             story= _ "Still wandering the unknown land, Gwiti entered lands of the Orcs."
             {JOURNEY_SKULL_OF_MORGORATH}
         [/part]
@@ -74,6 +77,7 @@
 #define STORYTXT_MAGES_AND_ELVES
     [story]
         [part]
+            music="gameplay06.ogg"
             story= _ "Furious at the Skull’s lack of power, Gwiti decided to seize a different artifact, the Book of Crelanu."
             {JOURNEY_MAGES_AND_ELVES}
         [/part]
@@ -83,6 +87,7 @@
 #define STORYTXT_CRELANUS_BOOK
     [story]
         [part]
+            music="the_dangerous_symphony.ogg"
             story= _ "According to the journal Gwiti recovered, after the death of Delfador the Great, the tradition was started to entrust the Book with the King’s closest advisor."
         [/part]
         [part]
@@ -102,6 +107,7 @@ Instead, they decided to hide Crelanu’s work where none would find it, while s
 #define STORYTXT_CONFRONTATION
     [story]
         [part]
+            music="revelation.ogg"
             {JOURNEY_CONFRONTATION}
         [/part]
     [/story]
@@ -110,6 +116,7 @@ Instead, they decided to hide Crelanu’s work where none would find it, while s
 #define STORYTXT_UNDERGROUND_POOL
     [story]
         [part]
+            music="nunc_dimittis.ogg"
             story= _ "Gwiti and Tanar rushed into the maze of twisting little passages, quickly leaving the humans behind. But not much later, they ran into dwarves..."
             {JOURNEY_UNDERGROUND_POOL}
         [/part]
@@ -119,6 +126,7 @@ Instead, they decided to hide Crelanu’s work where none would find it, while s
 #define STORYTXT_UNDERGROUND_RIVER
     [story]
         [part]
+            music="revelation.ogg"
             story= _ "Crossing the pool did not take long and soon the orcs and undead marched on through the damp cave, into the mountain.
 
 While the orcs shivered in the magical air, Gwiti spent some time reading the Tome."
