--- a/scenarios/05_Inside_The_Tower.cfg
+++ b/scenarios/05_Inside_The_Tower.cfg
@@ -39,6 +39,9 @@
         canrecruit=yes
         controller=human
         unrenamable=yes
+        gold=0
+        village_gold=0
+        income=-2
         recruit=Dark Adept,Ghost,Walking Corpse,Vampire Bat,Skeleton,Skeleton Archer
         user_team_name= _ "team_name^Gwiti"
         {FLAG_VARIANT undead}
