--- a/scenarios/08_Underground_Pool.cfg
+++ b/scenarios/08_Underground_Pool.cfg
@@ -212,15 +212,18 @@
             speaker=Tanar
             message= _ "The Hoard of the Dwarves! Three hundred pieces of gold at least!"
         [/message]
-
-        [sound]
-            name=gold.ogg
-        [/sound]
-
         [gold]
             side=1
             amount=320
         [/gold]
+        [sound]
+            name=gold.ogg
+        [/sound]
+        [floating_text]
+            x=1
+            y=8
+            text= _ "+320 gold"
+        [/floating_text]
         [remove_item]
             x,y=1,8
         [/remove_item]
