--- a/utils/items.cfg
+++ b/utils/items.cfg
@@ -87,7 +87,7 @@
                 [floating_text]
                     x={X}
                     y={Y}
-                    text="<span color='FFCC33'>"+ _ "+$gold_amount| gold"+"</span>"
+                    text= _ "+$gold_amount| gold"
                 [/floating_text]
             [/then]
         [/if]
