--- a/scenarios/06_Crelanus_Book.cfg
+++ b/scenarios/06_Crelanus_Book.cfg
@@ -94,8 +94,10 @@
     [side]
         side=4
         team_name=enemies
+        user_team_name= _ "team_name^Wesnothians"
         controller=null
         no_leader=yes
+        hidden=yes
     [/side]
 
     {STARTING_VILLAGES 2 7}
