--- a/_main.cfg
+++ b/_main.cfg
@@ -28,7 +28,7 @@
 "+_"(Intermediate level, 9 scenarios.)"+"
 <span color='#888' size='smaller'>
 "+_"Version:"+" {~add-ons/The_Dark_Hordes/dist/VERSION} "+_"for Battle for Wesnoth 1.18.0 or later"+"
-"+_"In Wesnoth.org:"+" https://r.wesnoth.org/t?????"+"</span>" # wmllint: no spellcheck
+"+_"In Wesnoth.org:"+" https://r.wesnoth.org/t58957"+"</span>" # wmllint: no spellcheck
     icon="units/undead-spirit/shadow-s-3.png~RC(magenta>red)"
     image="data/add-ons/The_Dark_Hordes/images/portraits/gwiti.png"
     {CAMPAIGN_TDH_SHARED 1 (_ " Part 1")}
@@ -40,7 +40,7 @@
 "+_"(Unfinished, 2 scenarios completed.)"+"
 <span color='#888' size='smaller'>
 "+_"Version:"+" {~add-ons/The_Dark_Hordes/dist/VERSION} "+_"for Battle for Wesnoth 1.18.0 or later"+"
-"+_"In Wesnoth.org:"+" https://r.wesnoth.org/t?????"+"</span>" # wmllint: no spellcheck
+"+_"In Wesnoth.org:"+" https://r.wesnoth.org/t58957"+"</span>" # wmllint: no spellcheck
     icon="units/undead-spirit/shadow-s-attack-1.png~RC(magenta>red)"
     image="data/add-ons/The_Dark_Hordes/images/portraits/tanar.png"
     {CAMPAIGN_TDH_SHARED 2 (_ " Part 2")}
