--- a/utils/death-utils.cfg
+++ b/utils/death-utils.cfg
@@ -51,12 +51,6 @@
             {RISE_UP_KILL_FILTER}
         [/filter_second]
 
-        [kill]
-            x=$x1
-            y=$y1
-            animate=no
-            fire_event=no
-        [/kill]
         [sound]
             name=zombie-attack.wav
         [/sound]
@@ -76,6 +70,7 @@
             facing=$unit.facing
             gender=$unit.gender
             variation=$unit.undead_variation
+            overwrite=yes
         [/unit]
     [/event]
 #enddef
