--- a/utils/items.cfg
+++ b/utils/items.cfg
@@ -76,10 +76,7 @@
         [/gold]
         {VARIABLE gold_amount ({GOLD_AMOUNT})}
         [if]
-            [variable]
-                name=gold_amount
-                numerical_not_equals=0
-            [/variable]
+            {VARIABLE_NUMERICAL_NOT_EQUALS gold_amount 0}
             [then]
                 [sound]
                     name=gold.ogg
@@ -91,6 +88,7 @@
                 [/floating_text]
             [/then]
         [/if]
+        {CLEAR_VARIABLE gold_amount}
         [remove_item]
             x={X}
             y={Y}
